[package]
name = "version1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
anyhow = "1.0.102"
futures-util = "0.3.32"
serde={version="1", features=["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }